--- a/_sass/uno.scss
+++ b/_sass/uno.scss
@@ -52,9 +52,8 @@ body {
  * MIT License
  */
 @font-face {
-	font-family: "foundation-icons";
-	src: url("../fonts/foundation-icons/foundation-icons.eot");
-	src: url("../fonts/foundation-icons/foundation-icons.eot?") format("embedded-opentype"), url("../fonts/foundation-icons/foundation-icons.woff") format("woff"), url("../fonts/foundation-icons/foundation-icons.ttf") format("truetype"), url("../fonts/foundation-icons/foundation-icons.svg") format("svg");
+	font-family: "NANUMBARUNGOTHIC.TTF";
+	src: url("../fonts/foundation-icons/NANUMBARUNGOTHIC.TTF");
 	font-weight: normal;
 	font-style: normal; }
 .icon:before {
