--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,4 +13,15 @@
       {% include footer.html %}
     </div>
   </body>
+
+<!-- 페이스북 댓글 플러그인 추가 -->
+  <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v3.2';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 </html>
