--- a/_sass/uno.scss
+++ b/_sass/uno.scss
@@ -924,7 +924,7 @@ html {
 	max-height: 100%; }
 
 body {
-	font-family: "Raleway", sans-serif;
+	font-family: "Console", sans-serif;
 	font-size: 1em;
 	color: #666666; }
 
@@ -952,7 +952,7 @@ h5,
 h5 {
 	margin-top: .8em;
 	margin-bottom: .4em;
-	font-family: "Roboto Slab", serif;
+	font-family: "Console", serif;
 	font-weight: lighter;
 	color: #333333;
 	-webkit-font-smoothing: antialiased; }
