Add: Google AdSense 등록을 위한 코드 추가

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,14 @@
   <meta name="robots" content="index.follow">
   {% endif %}
 
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-2015273233929524",
+    enable_page_level_ads: true
+  });
+</script>
+
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html }}{% else %}{{ site.description }}{% endif %}">
   <meta name="author" content="{{ site.author.name }}">
