Modify: google adsense 코드 추가

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,4 +24,12 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
+<!--google adsense-->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-2015273233929524",
+    enable_page_level_ads: true
+  });
+</script>
 </html>
