--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,4 +32,13 @@
     enable_page_level_ads: true
   });
 </script>
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-2015273233929524",
+          enable_page_level_ads: true
+     });
+</script>
+
 </html>
